--- a/portfolio.html
+++ b/portfolio.html
@@ -220,6 +220,20 @@
                 </li>
             </ul>
         </div>
+
+        <div class="footer-input">
+            <p class="footer-p">Підпишіться на розсилку</p>
+                <form>
+                    <div class="div-form">
+                        <input class="footer-input-email" type="text" placeholder="E-mail">
+                        <button class="footer-button" type="submit">Підписатися
+                            <svg class="footer-button-icon" width="24" height="24">
+                                <use href="./images/telegram.svg#icon-telegram"></use>
+                            </svg>
+                        </button>
+                </form>
+                    </div>
+        </div>
     </footer>
 </body>
 </html>
