--- a/index.html
+++ b/index.html
@@ -455,15 +455,15 @@
                     </div>
                 </div>
 
-                    <div class="form-field">
+                    <div class="form-field-comment">
                     <label class="modal-label">Коментар</label>
                         <textarea class="form-user-comment form-input" name="comment" rows="8" placeholder="Введіть текст"></textarea>
                     </div>
 
                     <label class="policy-label">
-                        <input type="checkbox" class="policy-checkbox visually hiddenn" name="policy">
+                        <input type="checkbox" class="policy-checkbox visually-hiddenn" name="policy">
                         <svg class="policy-icon" width="16" height="15">
-                            <use href="./images/check-icon.svg#icon-icon-check-3"></use>
+                            <use href="./images/check-icon.svg#icon-Vector-3-2"></use>
                         </svg>
                         Погоджуюсь з розсилкою та приймаю
                         <a class="checkbox-link" href="#">
